# XMatrix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: matrix.h
src/: CMakeLists.txt  matrix.cu
